--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,14 @@ dependencies:
   audioplayers: ^6.0.0
   vibration: ^1.8.4
 
+  # Localisation
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+
+  # URL launcher
+  url_launcher: ^6.2.4
+
   # Theme management
   flex_color_scheme: ^7.3.1
 
@@ -89,8 +97,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/audio/
-    - assets/vocal/
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
